Fix : DB 연결 완벽쓰

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -15,6 +15,8 @@ spring.jpa.database-platform=org.hibernate.dialect.MySQL5InnoDBDialect
 # ?? ??
 logging.level.org.hibernate=info
 
+spring.jpa.hibernate.ddl-auto=update
+
 # ??????? ??? ?? SQL?? ??? ??
 spring.jpa.properties.hibernate.show_sql=true
 # SQL?? ??? ?? ??
